# qred-mcp-proxy

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sbom-upload.yml  tests.yml
cdk/mcp-proxy/: .gitignore  CONFIGURATION.md  README.md  cdk.example.jsonc  cdk.json  package-lock.json  package.json
cdk/mcp-proxy/config/: mcp-servers.example.jsonc  mcp-servers.json
cdk/mcp-proxy/lib/: mcp-proxy-persistent.ts  mcp-proxy.ts
cdk/mcp-proxy/lib/constructs/: helpers.ts  service.ts  volumes.ts
cdk/mcp-proxy/lib/types/: config.ts  interfaces.ts
client-config/deployment/: mcp-config-deployment.sh
docker/mcp_oauth/: Dockerfile  build-and-push.sh  mcp_oauth.md  pyproject.toml
docker/mcp_oauth/mcp_oauth/: __init__.py  __main__.py  server.py  token_validation.py
docker/mcp_oauth/mcp_oauth/gcp/: __init__.py  google_wif.py
docker/mcp_oauth/mcp_oauth/utils/: __init__.py  helpers.py  logger.py
docker/mcp_proxy/: Dockerfile  build-and-push.sh  entrypoint.sh  mcp_proxy.md  pyproject.toml  servers.json
docker/mcp_proxy/mcp_proxy/: __init__.py  __main__.py
docker/mcp_proxy/mcp_proxy/server/: aggregated_proxy_server.py  mcp_server.py  oauth_client.py  proxy_server.py  sse_client.py  streamablehttp_client.py
docker/mcp_proxy/mcp_proxy/utils/: config_loader.py  logger.py  process_health.py  startup_mitigation.py  startup_monitor.py
tests/: README.md  add_suites_to_ctrf.py  conftest.py  run_tests.py
tests/oauth/: __init__.py  test_credential_refresh.py  test_oauth_endpoints.py  test_oauth_integration.py  test_performance.py  test_token_validation.py
tests/proxy/: __init__.py  test_advanced_config_unit.py  test_config_loading_unit.py  test_lifecycle_unit.py
