[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qred-mcp-proxy"
version = "0.1.0"
requires-python = ">=3.13"
description = "QRED MCP Proxy - Oauth enabled proxy service for serving aggregated mcp backends"
authors = [
    {name = "Qred", email = "team-eed-platform@qred.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
  "uv==0.8.19",
  "mcp-proxy",
  "mcp-oauth"
]

[tool.hatch.build.targets.wheel]
packages = [
  "docker/*"
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1", 
    "pytest-cov==7.0.0",
    "pytest-json-ctrf==0.3.5",
    "httpx==0.28.1",
    "black==25.9.0",
    "flake8==7.3.0",
    "mypy==1.17.1",
]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1", 
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]

[tool.uv.sources]
mcp-proxy = { path = "docker/mcp_proxy" }
mcp-oauth = { path = "docker/mcp_oauth" }

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true