[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-oauth"
version = "0.1.0"
description = "Standalone OAuth 2.1 service for MCP servers with Dynamic Client Registration support"
authors = [
    {name = "Qred", email = "team-eed-platform@qred.com"}
]
readme = "mcp_oauth.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.2",
    "uvicorn[standard]==0.35.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "starlette==0.48.0",
    "boto3==1.40.33",
    "google-auth==2.40.3",
    "google-api-python-client==2.182.0",
    "requests==2.32.5"
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.1", 
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]

[project.scripts]
mcp-oauth = "mcp_oauth.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_oauth"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
